
== Unreleased

=== Added

* recognize Hint as admonition label; map to TIP
* replace no-break space with \{nbsp}

=== Changed

* rewrite converter to use a structured writer
* remove blockquote enclosure around simple admonition block
* revert \&amp; back to &
* use separate list level for dl

== 1.0.0.alpha.4 (2018-06-12) - @mojavelinux

=== Added

* convert description (aka definition) lists (#8)
* detect menu reference and convert to inline menu macro
* add blank line above nested list that follows compound list item
* convert codeblock with non-contiguous lines beginning with a command prompt to a source,console listing block
* use list continuation to attach blockquote to list item
* handle case when HTML br element appears at start of paragraph
* allow blockquotes to be nested to an arbitrary depth
* remove trailing spaces from output
* convert deleted text span

=== Changed

* use title from front matter as document title if explicit document title (level 1 heading) is absent
* automatically convert newlines to LF when reading file
* convert indented codeblock to literal (indented) paragraph
* change separator comment from //- to //
* mark br converted from HTML br element
* round CSS width value for image
* upgrade kramdown to 1.17.0
* use correct casing for kramdown in README and library metadata

== 1.0.0.alpha.3 (2018-05-31) - @mojavelinux

=== Added

* patch conversion from HTML br element to native until the fix for gettalong/kramdown#514 is released
* preserve non-default table column alignment
* honor image width specified in style attribute of HTML img element
* replace empty HTML p element with paragraph containing \{blank}

=== Changed

* replace ndash symbol with \-- instead of \&#8211;

== 1.0.0.alpha.2 (2018-05-24) - @mojavelinux

=== Added

* automatically coerce level 5 heading above codeblock to block title
* convert HTML-based admonition blocks
* drop HTML div element if enclosing an image