@@ -2,4 +2,9 @@ kramdown
 : A Markdown-superset converter (aren't they all?)
 
 kramdown-asciidoc
-: A Markdown to AsciiDoc converter based on kramdown
+: A Markdown to AsciiDoc converter;
+  based on kramdown
+
+asciidoctor
+: The modern AsciiDoc converter.
+  This tool will come in handy once you've made the switch to AsciiDoc.
